# FastAPI

./: README.md
Todoapp/: Dockerfile  database.db  pyproject.toml
Todoapp/tests/: test_main.py
Todoapp/todoapp/: main.py  main2.py
